# copilot_skills

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  test.yml
rnd_template/: main.py
skills/translation-analysis/: SKILL.md  SKILL.md.bak  prompts_mqm.md  ref_io_helpers.md  ref_llm_judge.md  ref_metric_pipeline.md  ref_metricx.md  ref_mqm_heuristics.md  ref_topic_modeling.md  vllm_client.py
skills/vllm-app/: SKILL.md  vllm_client.py
tests/: test_default.py
